--- a/Zirpl.AppEngine/Zirpl.AppEngine.csproj
+++ b/Zirpl.AppEngine/Zirpl.AppEngine.csproj
@@ -127,13 +127,13 @@
     <Compile Include="Model\BatchProcessing\IBatch.cs" />
     <Compile Include="Model\BatchProcessing\IBatchItem.cs" />
     <Compile Include="Model\BatchProcessing\IBatchItemError.cs" />
-    <Compile Include="Model\Customization\CustomFieldDefinitionBase.cs" />
-    <Compile Include="Model\Customization\CustomFieldDefinitionTypeEnum.cs" />
-    <Compile Include="Model\Customization\ExtendedEntityFieldValueBase.cs" />
-    <Compile Include="Model\Customization\ICustomFieldDefinition.cs" />
-    <Compile Include="Model\Customization\ICustomFieldDefinitionType.cs" />
-    <Compile Include="Model\Customization\IExtendedEntityFieldValue.cs" />
-    <Compile Include="Model\Customization\IExtendable.cs" />
+    <Compile Include="Model\Extensibility\CustomFieldDefinitionBase.cs" />
+    <Compile Include="Model\Extensibility\CustomFieldDefinitionTypeEnum.cs" />
+    <Compile Include="Model\Extensibility\ExtendedEntityFieldValueBase.cs" />
+    <Compile Include="Model\Extensibility\ICustomFieldDefinition.cs" />
+    <Compile Include="Model\Extensibility\ICustomFieldDefinitionType.cs" />
+    <Compile Include="Model\Extensibility\IExtendedEntityFieldValue.cs" />
+    <Compile Include="Model\Extensibility\IExtensible.cs" />
     <Compile Include="Model\Search\DefaultSearchCriteria.cs" />
     <Compile Include="Model\StaticLookupEntityBase.cs" />
     <Compile Include="Model\EntityBase.cs" />
