--- a/Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.CodeGeneration/AppTransform.json
+++ b/Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.CodeGeneration/AppTransform.json
@@ -44,7 +44,7 @@
         "IsAbstract": true,
         "IsVersionable": null,
         "IsAuditable": null,
-        "IsEndUserExtendable": true,
+        "IsExtensible": true,
         "IsInsertable": null,
         "IsUpdatable": null,
         "IsDeletable": false,
@@ -66,7 +66,7 @@
       "IsEnum": false,
       "IsVersionable": true,
       "IsAuditable": true,
-      "IsExtendable": true,
+      "IsExtensible": true,
       "IsExtendedEntityFieldValue": false,
       "IsInsertable": true,
       "IsUpdatable": true,
@@ -77,13 +77,14 @@
           "$id": "7",
           "Name": "Id",
           "DataType": 22,
+          "DataTypeString": "Guid",
           "IsPrimaryKey": true,
           "IsForeignKey": false,
           "AutoGenerationBehavior": 1,
           "IsRowVersion": false,
           "IsForAuditableInterface": false,
           "IsForMarkDeletedInterface": false,
-          "IsForExtendableInterface": false,
+          "IsForExtensibleInterface": false,
           "IsForExtendedEntityFieldValueInterface": false,
           "IsForIsStaticLookupInterface": false,
           "IsNullable": false,
@@ -104,13 +105,14 @@
           "$id": "8",
           "Name": "RowVersion",
           "DataType": 26,
+          "DataTypeString": "byte[]",
           "IsPrimaryKey": false,
           "IsForeignKey": false,
           "AutoGenerationBehavior": 1,
           "IsRowVersion": true,
           "IsForAuditableInterface": false,
           "IsForMarkDeletedInterface": false,
-          "IsForExtendableInterface": false,
+          "IsForExtensibleInterface": false,
           "IsForExtendedEntityFieldValueInterface": false,
           "IsForIsStaticLookupInterface": false,
           "IsNullable": false,
@@ -131,13 +133,14 @@
           "$id": "9",
           "Name": "CreatedUserId",
           "DataType": 13,
+          "DataTypeString": "string",
           "IsPrimaryKey": false,
           "IsForeignKey": false,
           "AutoGenerationBehavior": 2,
           "IsRowVersion": false,
           "IsForAuditableInterface": true,
           "IsForMarkDeletedInterface": false,
-          "IsForExtendableInterface": false,
+          "IsForExtensibleInterface": false,
           "IsForExtendedEntityFieldValueInterface": false,
           "IsForIsStaticLookupInterface": false,
           "IsNullable": false,
@@ -158,13 +161,14 @@
           "$id": "10",
           "Name": "UpdatedUserId",
           "DataType": 13,
+          "DataTypeString": "string",
           "IsPrimaryKey": false,
           "IsForeignKey": false,
           "AutoGenerationBehavior": 2,
           "IsRowVersion": false,
           "IsForAuditableInterface": true,
           "IsForMarkDeletedInterface": false,
-          "IsForExtendableInterface": false,
+          "IsForExtensibleInterface": false,
           "IsForExtendedEntityFieldValueInterface": false,
           "IsForIsStaticLookupInterface": false,
           "IsNullable": false,
@@ -185,13 +189,14 @@
           "$id": "11",
           "Name": "CreatedDate",
           "DataType": 18,
+          "DataTypeString": "DateTime?",
           "IsPrimaryKey": false,
           "IsForeignKey": false,
           "AutoGenerationBehavior": 2,
           "IsRowVersion": false,
           "IsForAuditableInterface": true,
           "IsForMarkDeletedInterface": false,
-          "IsForExtendableInterface": false,
+          "IsForExtensibleInterface": false,
           "IsForExtendedEntityFieldValueInterface": false,
           "IsForIsStaticLookupInterface": false,
           "IsNullable": true,
@@ -212,13 +217,14 @@
           "$id": "12",
           "Name": "UpdatedDate",
           "DataType": 18,
+          "DataTypeString": "DateTime?",
           "IsPrimaryKey": false,
           "IsForeignKey": false,
           "AutoGenerationBehavior": 2,
           "IsRowVersion": false,
           "IsForAuditableInterface": true,
           "IsForMarkDeletedInterface": false,
-          "IsForExtendableInterface": false,
+          "IsForExtensibleInterface": false,
           "IsForExtendedEntityFieldValueInterface": false,
           "IsForIsStaticLookupInterface": false,
           "IsNullable": true,
@@ -239,13 +245,14 @@
           "$id": "13",
           "Name": "ExtendedFieldValues",
           "DataType": 21,
+          "DataTypeString": "System.Collections.Generic.IList<Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model.AddressBaseExtendedFieldValue>",
           "IsPrimaryKey": false,
           "IsForeignKey": false,
           "AutoGenerationBehavior": 0,
           "IsRowVersion": false,
           "IsForAuditableInterface": false,
           "IsForMarkDeletedInterface": false,
-          "IsForExtendableInterface": true,
+          "IsForExtensibleInterface": true,
           "IsForExtendedEntityFieldValueInterface": false,
           "IsForIsStaticLookupInterface": false,
           "IsNullable": false,
@@ -284,7 +291,7 @@
               "IsEnum": false,
               "IsVersionable": true,
               "IsAuditable": false,
-              "IsExtendable": false,
+              "IsExtensible": false,
               "IsExtendedEntityFieldValue": true,
               "IsInsertable": true,
               "IsUpdatable": true,
@@ -295,13 +302,14 @@
                   "$id": "16",
                   "Name": "Id",
                   "DataType": 22,
+                  "DataTypeString": "Guid",
                   "IsPrimaryKey": true,
                   "IsForeignKey": false,
                   "AutoGenerationBehavior": 1,
                   "IsRowVersion": false,
                   "IsForAuditableInterface": false,
                   "IsForMarkDeletedInterface": false,
-                  "IsForExtendableInterface": false,
+                  "IsForExtensibleInterface": false,
                   "IsForExtendedEntityFieldValueInterface": false,
                   "IsForIsStaticLookupInterface": false,
                   "IsNullable": false,
@@ -322,13 +330,14 @@
                   "$id": "17",
                   "Name": "RowVersion",
                   "DataType": 26,
+                  "DataTypeString": "byte[]",
                   "IsPrimaryKey": false,
                   "IsForeignKey": false,
                   "AutoGenerationBehavior": 1,
                   "IsRowVersion": true,
                   "IsForAuditableInterface": false,
                   "IsForMarkDeletedInterface": false,
-                  "IsForExtendableInterface": false,
+                  "IsForExtensibleInterface": false,
                   "IsForExtendedEntityFieldValueInterface": false,
                   "IsForIsStaticLookupInterface": false,
                   "IsNullable": false,
@@ -349,13 +358,14 @@
                   "$id": "18",
                   "Name": "ExtendedEntity",
                   "DataType": 21,
+                  "DataTypeString": "Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model.AddressBase",
                   "IsPrimaryKey": false,
                   "IsForeignKey": false,
                   "AutoGenerationBehavior": 0,
                   "IsRowVersion": false,
                   "IsForAuditableInterface": false,
                   "IsForMarkDeletedInterface": false,
-                  "IsForExtendableInterface": false,
+                  "IsForExtensibleInterface": false,
                   "IsForExtendedEntityFieldValueInterface": true,
                   "IsForIsStaticLookupInterface": false,
                   "IsNullable": false,
@@ -378,13 +388,14 @@
                   "$id": "19",
                   "Name": "ExtendedEntityId",
                   "DataType": 22,
+                  "DataTypeString": "Guid",
                   "IsPrimaryKey": false,
                   "IsForeignKey": true,
                   "AutoGenerationBehavior": 0,
                   "IsRowVersion": false,
                   "IsForAuditableInterface": false,
                   "IsForMarkDeletedInterface": false,
-                  "IsForExtendableInterface": false,
+                  "IsForExtensibleInterface": false,
                   "IsForExtendedEntityFieldValueInterface": true,
                   "IsForIsStaticLookupInterface": false,
                   "IsNullable": false,
@@ -407,13 +418,14 @@
                   "$id": "20",
                   "Name": "Value",
                   "DataType": 13,
+                  "DataTypeString": "string",
                   "IsPrimaryKey": false,
                   "IsForeignKey": false,
                   "AutoGenerationBehavior": 0,
                   "IsRowVersion": false,
                   "IsForAuditableInterface": false,
                   "IsForMarkDeletedInterface": false,
-                  "IsForExtendableInterface": false,
+                  "IsForExtensibleInterface": false,
                   "IsForExtendedEntityFieldValueInterface": true,
                   "IsForIsStaticLookupInterface": false,
                   "IsNullable": false,
@@ -480,7 +492,7 @@
             "IsAbstract": null,
             "IsVersionable": null,
             "IsAuditable": null,
-            "IsEndUserExtendable": null,
+            "IsExtensible": null,
             "IsInsertable": null,
             "IsUpdatable": null,
             "IsDeletable": false,
@@ -502,7 +514,7 @@
           "IsEnum": false,
           "IsVersionable": true,
           "IsAuditable": true,
-          "IsExtendable": true,
+          "IsExtensible": true,
           "IsExtendedEntityFieldValue": false,
           "IsInsertable": true,
           "IsUpdatable": true,
@@ -534,7 +546,7 @@
             "IsAbstract": null,
             "IsVersionable": null,
             "IsAuditable": null,
-            "IsEndUserExtendable": null,
+            "IsExtensible": null,
             "IsInsertable": null,
             "IsUpdatable": null,
             "IsDeletable": false,
@@ -556,7 +568,7 @@
           "IsEnum": false,
           "IsVersionable": true,
           "IsAuditable": true,
-          "IsExtendable": true,
+          "IsExtensible": true,
           "IsExtendedEntityFieldValue": false,
           "IsInsertable": true,
           "IsUpdatable": true,
@@ -614,7 +626,7 @@
         "IsAbstract": null,
         "IsVersionable": null,
         "IsAuditable": null,
-        "IsEndUserExtendable": null,
+        "IsExtensible": null,
         "IsInsertable": null,
         "IsUpdatable": null,
         "IsDeletable": null,
@@ -647,7 +659,7 @@
       "IsEnum": false,
       "IsVersionable": false,
       "IsAuditable": false,
-      "IsExtendable": false,
+      "IsExtensible": false,
       "IsExtendedEntityFieldValue": false,
       "IsInsertable": false,
       "IsUpdatable": false,
@@ -658,13 +670,14 @@
           "$id": "30",
           "Name": "Id",
           "DataType": 6,
+          "DataTypeString": "int",
           "IsPrimaryKey": true,
           "IsForeignKey": false,
           "AutoGenerationBehavior": 1,
           "IsRowVersion": false,
           "IsForAuditableInterface": false,
           "IsForMarkDeletedInterface": false,
-          "IsForExtendableInterface": false,
+          "IsForExtensibleInterface": false,
           "IsForExtendedEntityFieldValueInterface": false,
           "IsForIsStaticLookupInterface": false,
           "IsNullable": false,
@@ -683,15 +696,16 @@
         },
         {
           "$id": "31",
-          "Name": "Name",
+          "Name": "ClassName",
           "DataType": 13,
+          "DataTypeString": "string",
           "IsPrimaryKey": false,
           "IsForeignKey": false,
           "AutoGenerationBehavior": 0,
           "IsRowVersion": false,
           "IsForAuditableInterface": false,
           "IsForMarkDeletedInterface": false,
-          "IsForExtendableInterface": false,
+          "IsForExtensibleInterface": false,
           "IsForExtendedEntityFieldValueInterface": false,
           "IsForIsStaticLookupInterface": true,
           "IsNullable": false,
@@ -734,7 +748,7 @@
         "IsEnum": true,
         "IsVersionable": false,
         "IsAuditable": false,
-        "IsExtendable": false,
+        "IsExtensible": false,
         "IsExtendedEntityFieldValue": false,
         "IsInsertable": false,
         "IsUpdatable": false,
@@ -776,9 +790,147 @@
       "$ref": "32"
     }
   ],
-  "FilesToGenerate": [],
+  "FilesToGenerate": [
+    {
+      "$id": "35",
+      "ClassName": "AddressBase",
+      "ClassFullName": "Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model.AddressBase",
+      "Namespace": "Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model",
+      "BaseClassDeclaration": null,
+      "InterfaceDeclarations": [
+        "Zirpl.AppEngine.Model.IPersistable<Guid>",
+        "Zirpl.AppEngine.Model.IAuditable",
+        "Zirpl.AppEngine.Model.Extensibility.IExtensible<Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model.AddressBase,Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model.AddressBaseExtendedFieldValue,Guid>",
+        "Zirpl.AppEngine.Model.IVersionable"
+      ],
+      "IsAbstract": true,
+      "BaseDeclaration": "public partial abstract AddressBase :\r\n,\r\nZirpl.AppEngine.Model.IPersistable<Guid>,\r\nZirpl.AppEngine.Model.IAuditable,\r\nZirpl.AppEngine.Model.Extensibility.IExtensible<Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model.AddressBase,Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model.AddressBaseExtendedFieldValue,Guid>,\r\nZirpl.AppEngine.Model.IVersionable",
+      "FileNameWithoutExtension": "AddressBase",
+      "FileExtension": ".auto.cs",
+      "DestinationProject": {
+        "$ref": "6"
+      },
+      "FolderPath": "_auto\\",
+      "BuildAction": 1,
+      "FileName": "AddressBase.auto.cs",
+      "TemplateType": "Zirpl.AppEngine.CodeGeneration.V2.Templates.Model.PersistableDomainClassTemplate, Zirpl.AppEngine.CodeGeneration.VS2013, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null",
+      "TemplateParameters": {
+        "$id": "36",
+        "DomainType": {
+          "$ref": "3"
+        }
+      }
+    },
+    {
+      "$id": "37",
+      "ClassName": "DomesticAddress",
+      "ClassFullName": "Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model.DomesticAddress",
+      "Namespace": "Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model",
+      "BaseClassDeclaration": "Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model.AddressBase",
+      "InterfaceDeclarations": [],
+      "IsAbstract": false,
+      "BaseDeclaration": "public partial DomesticAddress :\r\n",
+      "FileNameWithoutExtension": "DomesticAddress",
+      "FileExtension": ".auto.cs",
+      "DestinationProject": {
+        "$ref": "6"
+      },
+      "FolderPath": "_auto\\",
+      "BuildAction": 1,
+      "FileName": "DomesticAddress.auto.cs",
+      "TemplateType": "Zirpl.AppEngine.CodeGeneration.V2.Templates.Model.PersistableDomainClassTemplate, Zirpl.AppEngine.CodeGeneration.VS2013, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null",
+      "TemplateParameters": {
+        "$id": "38",
+        "DomainType": {
+          "$ref": "21"
+        }
+      }
+    },
+    {
+      "$id": "39",
+      "ClassName": "InternationalAddress",
+      "ClassFullName": "Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model.InternationalAddress",
+      "Namespace": "Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model",
+      "BaseClassDeclaration": "Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model.AddressBase",
+      "InterfaceDeclarations": [],
+      "IsAbstract": false,
+      "BaseDeclaration": "public partial InternationalAddress :\r\n",
+      "FileNameWithoutExtension": "InternationalAddress",
+      "FileExtension": ".auto.cs",
+      "DestinationProject": {
+        "$ref": "6"
+      },
+      "FolderPath": "_auto\\",
+      "BuildAction": 1,
+      "FileName": "InternationalAddress.auto.cs",
+      "TemplateType": "Zirpl.AppEngine.CodeGeneration.V2.Templates.Model.PersistableDomainClassTemplate, Zirpl.AppEngine.CodeGeneration.VS2013, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null",
+      "TemplateParameters": {
+        "$id": "40",
+        "DomainType": {
+          "$ref": "23"
+        }
+      }
+    },
+    {
+      "$id": "41",
+      "ClassName": "NamePrefixType",
+      "ClassFullName": "Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model.NamePrefixType",
+      "Namespace": "Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model",
+      "BaseClassDeclaration": null,
+      "InterfaceDeclarations": [
+        "Zirpl.AppEngine.Model.IPersistable<int>",
+        "Zirpl.AppEngine.Model.IStaticLookup<int,Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model.NamePrefixTypeEnum>"
+      ],
+      "IsAbstract": false,
+      "BaseDeclaration": "public partial NamePrefixType :\r\n,\r\nZirpl.AppEngine.Model.IPersistable<int>,\r\nZirpl.AppEngine.Model.IStaticLookup<int,Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model.NamePrefixTypeEnum>",
+      "FileNameWithoutExtension": "NamePrefixType",
+      "FileExtension": ".auto.cs",
+      "DestinationProject": {
+        "$ref": "6"
+      },
+      "FolderPath": "_auto\\",
+      "BuildAction": 1,
+      "FileName": "NamePrefixType.auto.cs",
+      "TemplateType": "Zirpl.AppEngine.CodeGeneration.V2.Templates.Model.PersistableDomainClassTemplate, Zirpl.AppEngine.CodeGeneration.VS2013, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null",
+      "TemplateParameters": {
+        "$id": "42",
+        "DomainType": {
+          "$ref": "25"
+        }
+      }
+    },
+    {
+      "$id": "43",
+      "ClassName": "AddressBaseExtendedFieldValue",
+      "ClassFullName": "Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model.AddressBaseExtendedFieldValue",
+      "Namespace": "Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model",
+      "BaseClassDeclaration": null,
+      "InterfaceDeclarations": [
+        "Zirpl.AppEngine.Model.IPersistable<Guid>",
+        "Zirpl.AppEngine.Model.Extensibility.IExtendedEntityFieldValue<Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model.AddressBase,Guid>",
+        "Zirpl.AppEngine.Model.IVersionable"
+      ],
+      "IsAbstract": false,
+      "BaseDeclaration": "public partial AddressBaseExtendedFieldValue :\r\n,\r\nZirpl.AppEngine.Model.IPersistable<Guid>,\r\nZirpl.AppEngine.Model.Extensibility.IExtendedEntityFieldValue<Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model.AddressBase,Guid>,\r\nZirpl.AppEngine.Model.IVersionable",
+      "FileNameWithoutExtension": "AddressBaseExtendedFieldValue",
+      "FileExtension": ".auto.cs",
+      "DestinationProject": {
+        "$ref": "6"
+      },
+      "FolderPath": "_auto\\",
+      "BuildAction": 1,
+      "FileName": "AddressBaseExtendedFieldValue.auto.cs",
+      "TemplateType": "Zirpl.AppEngine.CodeGeneration.V2.Templates.Model.PersistableDomainClassTemplate, Zirpl.AppEngine.CodeGeneration.VS2013, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null",
+      "TemplateParameters": {
+        "$id": "44",
+        "DomainType": {
+          "$ref": "15"
+        }
+      }
+    }
+  ],
   "CodeGenerationProject": {
-    "$id": "35"
+    "$id": "45"
   },
   "ModelProject": {
     "$ref": "6"
@@ -792,4 +944,10 @@
   "TestsCommonProject": null
 }
 // Generated helper templates
+// E:\projects\ZAppEngine\Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model\_auto\AppTransform.txt4
 // Generated items
+// E:\projects\ZAppEngine\Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model\_auto\AddressBaseExtendedFieldValue.auto.cs
+// E:\projects\ZAppEngine\Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model\_auto\NamePrefixType.auto.cs
+// E:\projects\ZAppEngine\Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model\_auto\InternationalAddress.auto.cs
+// E:\projects\ZAppEngine\Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model\_auto\DomesticAddress.auto.cs
+// E:\projects\ZAppEngine\Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model\_auto\AddressBase.auto.cs
