--- a/Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model/Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model.csproj
+++ b/Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model/Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model.csproj
@@ -41,6 +41,21 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="_auto\AddressBase.auto.cs">
+      <DependentUpon>AppTransform.txt4</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\AddressBaseExtendedFieldValue.auto.cs">
+      <DependentUpon>AppTransform.txt4</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\DomesticAddress.auto.cs">
+      <DependentUpon>AppTransform.txt4</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\InternationalAddress.auto.cs">
+      <DependentUpon>AppTransform.txt4</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\NamePrefixType.auto.cs">
+      <DependentUpon>AppTransform.txt4</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Zirpl.AppEngine\Zirpl.AppEngine.csproj">
@@ -48,8 +63,9 @@
       <Name>Zirpl.AppEngine</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="_auto\" />
+    <None Include="_auto\AppTransform.txt4" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
