renaming namespaces and project files for better accuracy

--- a/Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.CodeGeneration/AppTransform.json
+++ b/Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.CodeGeneration/AppTransform.json
@@ -17,14 +17,14 @@
   "ConfigFilePath": "E:\\projects\\ZAppEngine\\Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.CodeGeneration\\_config\\AppDefinition.app.zae",
   "GeneratedCodeRootFolderName": "_auto\\",
   "GeneratedCSFileExtension": ".auto.cs",
-  "ModelProjectName": "Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model",
-  "DataServiceProjectName": "Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.DataService",
-  "ServiceProjectName": "Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Service",
-  "WebProjectName": "Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Web",
-  "WebCommonProjectName": "Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Web.Common",
-  "DataServiceTestsProjectName": "Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Tests.DataService",
+  "ModelProjectName": "Zirpl.Examples.Commerce.Model",
+  "DataServiceProjectName": "Zirpl.Examples.Commerce.DataService",
+  "ServiceProjectName": "Zirpl.Examples.Commerce.Service",
+  "WebProjectName": "Zirpl.Examples.Commerce.Web",
+  "WebCommonProjectName": "Zirpl.Examples.Commerce.Web.Common",
+  "DataServiceTestsProjectName": "Zirpl.Examples.Commerce.Tests.DataService",
   "ServiceTestsProjectName": null,
-  "TestsCommonProjectName": "Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Tests.Common",
+  "TestsCommonProjectName": "Zirpl.Examples.Commerce.Tests.Common",
   "DataContextName": "CommerceDataContext",
   "DomainTypes": [
     {
@@ -57,8 +57,8 @@
         "$id": "6"
       },
       "Name": "AddressBase",
-      "Namespace": "Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model",
-      "FullName": "Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model.AddressBase",
+      "Namespace": "Zirpl.Examples.Commerce.Model",
+      "FullName": "Zirpl.Examples.Commerce.Model.AddressBase",
       "PluralName": "AddressBases",
       "IsAbstract": true,
       "IsPersistable": true,
@@ -245,7 +245,7 @@
           "$id": "13",
           "Name": "ExtendedFieldValues",
           "DataType": 21,
-          "DataTypeString": "System.Collections.Generic.IList<Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model.AddressBaseExtendedFieldValue>",
+          "DataTypeString": "System.Collections.Generic.IList<Zirpl.Examples.Commerce.Model.AddressBaseExtendedFieldValue>",
           "IsPrimaryKey": false,
           "IsForeignKey": false,
           "AutoGenerationBehavior": 0,
@@ -282,8 +282,8 @@
                 "$ref": "6"
               },
               "Name": "AddressBaseExtendedFieldValue",
-              "Namespace": "Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model",
-              "FullName": "Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model.AddressBaseExtendedFieldValue",
+              "Namespace": "Zirpl.Examples.Commerce.Model",
+              "FullName": "Zirpl.Examples.Commerce.Model.AddressBaseExtendedFieldValue",
               "PluralName": "AddressBaseExtendedFieldValues",
               "IsAbstract": false,
               "IsPersistable": true,
@@ -358,7 +358,7 @@
                   "$id": "18",
                   "Name": "ExtendedEntity",
                   "DataType": 21,
-                  "DataTypeString": "Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model.AddressBase",
+                  "DataTypeString": "Zirpl.Examples.Commerce.Model.AddressBase",
                   "IsPrimaryKey": false,
                   "IsForeignKey": false,
                   "AutoGenerationBehavior": 0,
@@ -505,8 +505,8 @@
             "$ref": "6"
           },
           "Name": "DomesticAddress",
-          "Namespace": "Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model",
-          "FullName": "Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model.DomesticAddress",
+          "Namespace": "Zirpl.Examples.Commerce.Model",
+          "FullName": "Zirpl.Examples.Commerce.Model.DomesticAddress",
           "PluralName": "DomesticAddresses",
           "IsAbstract": false,
           "IsPersistable": true,
@@ -559,8 +559,8 @@
             "$ref": "6"
           },
           "Name": "InternationalAddress",
-          "Namespace": "Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model",
-          "FullName": "Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model.InternationalAddress",
+          "Namespace": "Zirpl.Examples.Commerce.Model",
+          "FullName": "Zirpl.Examples.Commerce.Model.InternationalAddress",
           "PluralName": "InternationalAddresses",
           "IsAbstract": false,
           "IsPersistable": true,
@@ -650,8 +650,8 @@
         "$ref": "6"
       },
       "Name": "NamePrefixType",
-      "Namespace": "Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model",
-      "FullName": "Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model.NamePrefixType",
+      "Namespace": "Zirpl.Examples.Commerce.Model",
+      "FullName": "Zirpl.Examples.Commerce.Model.NamePrefixType",
       "PluralName": "NamePrefixTypes",
       "IsAbstract": false,
       "IsPersistable": true,
@@ -739,8 +739,8 @@
           "$ref": "6"
         },
         "Name": "NamePrefixTypeEnum",
-        "Namespace": "Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model",
-        "FullName": "Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model.NamePrefixTypeEnum",
+        "Namespace": "Zirpl.Examples.Commerce.Model",
+        "FullName": "Zirpl.Examples.Commerce.Model.NamePrefixTypeEnum",
         "PluralName": "NamePrefixTypeEnums",
         "IsAbstract": false,
         "IsPersistable": false,
@@ -794,17 +794,17 @@
     {
       "$id": "35",
       "ClassName": "AddressBase",
-      "ClassFullName": "Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model.AddressBase",
-      "Namespace": "Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model",
+      "ClassFullName": "Zirpl.Examples.Commerce.Model.AddressBase",
+      "Namespace": "Zirpl.Examples.Commerce.Model",
       "BaseClassDeclaration": null,
       "InterfaceDeclarations": [
         "Zirpl.AppEngine.Model.IPersistable<Guid>",
         "Zirpl.AppEngine.Model.IAuditable",
-        "Zirpl.AppEngine.Model.Extensibility.IExtensible<Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model.AddressBase,Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model.AddressBaseExtendedFieldValue,Guid>",
+        "Zirpl.AppEngine.Model.Extensibility.IExtensible<Zirpl.Examples.Commerce.Model.AddressBase,Zirpl.Examples.Commerce.Model.AddressBaseExtendedFieldValue,Guid>",
         "Zirpl.AppEngine.Model.IVersionable"
       ],
       "IsAbstract": true,
-      "BaseDeclaration": "public partial abstract AddressBase :\r\n,\r\nZirpl.AppEngine.Model.IPersistable<Guid>,\r\nZirpl.AppEngine.Model.IAuditable,\r\nZirpl.AppEngine.Model.Extensibility.IExtensible<Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model.AddressBase,Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model.AddressBaseExtendedFieldValue,Guid>,\r\nZirpl.AppEngine.Model.IVersionable",
+      "BaseDeclaration": "public partial abstract AddressBase :\r\n,\r\nZirpl.AppEngine.Model.IPersistable<Guid>,\r\nZirpl.AppEngine.Model.IAuditable,\r\nZirpl.AppEngine.Model.Extensibility.IExtensible<Zirpl.Examples.Commerce.Model.AddressBase,Zirpl.Examples.Commerce.Model.AddressBaseExtendedFieldValue,Guid>,\r\nZirpl.AppEngine.Model.IVersionable",
       "FileNameWithoutExtension": "AddressBase",
       "FileExtension": ".auto.cs",
       "DestinationProject": {
@@ -824,9 +824,9 @@
     {
       "$id": "37",
       "ClassName": "DomesticAddress",
-      "ClassFullName": "Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model.DomesticAddress",
-      "Namespace": "Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model",
-      "BaseClassDeclaration": "Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model.AddressBase",
+      "ClassFullName": "Zirpl.Examples.Commerce.Model.DomesticAddress",
+      "Namespace": "Zirpl.Examples.Commerce.Model",
+      "BaseClassDeclaration": "Zirpl.Examples.Commerce.Model.AddressBase",
       "InterfaceDeclarations": [],
       "IsAbstract": false,
       "BaseDeclaration": "public partial DomesticAddress :\r\n",
@@ -849,9 +849,9 @@
     {
       "$id": "39",
       "ClassName": "InternationalAddress",
-      "ClassFullName": "Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model.InternationalAddress",
-      "Namespace": "Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model",
-      "BaseClassDeclaration": "Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model.AddressBase",
+      "ClassFullName": "Zirpl.Examples.Commerce.Model.InternationalAddress",
+      "Namespace": "Zirpl.Examples.Commerce.Model",
+      "BaseClassDeclaration": "Zirpl.Examples.Commerce.Model.AddressBase",
       "InterfaceDeclarations": [],
       "IsAbstract": false,
       "BaseDeclaration": "public partial InternationalAddress :\r\n",
@@ -874,15 +874,15 @@
     {
       "$id": "41",
       "ClassName": "NamePrefixType",
-      "ClassFullName": "Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model.NamePrefixType",
-      "Namespace": "Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model",
+      "ClassFullName": "Zirpl.Examples.Commerce.Model.NamePrefixType",
+      "Namespace": "Zirpl.Examples.Commerce.Model",
       "BaseClassDeclaration": null,
       "InterfaceDeclarations": [
         "Zirpl.AppEngine.Model.IPersistable<int>",
-        "Zirpl.AppEngine.Model.IStaticLookup<int,Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model.NamePrefixTypeEnum>"
+        "Zirpl.AppEngine.Model.IStaticLookup<int,Zirpl.Examples.Commerce.Model.NamePrefixTypeEnum>"
       ],
       "IsAbstract": false,
-      "BaseDeclaration": "public partial NamePrefixType :\r\n,\r\nZirpl.AppEngine.Model.IPersistable<int>,\r\nZirpl.AppEngine.Model.IStaticLookup<int,Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model.NamePrefixTypeEnum>",
+      "BaseDeclaration": "public partial NamePrefixType :\r\n,\r\nZirpl.AppEngine.Model.IPersistable<int>,\r\nZirpl.AppEngine.Model.IStaticLookup<int,Zirpl.Examples.Commerce.Model.NamePrefixTypeEnum>",
       "FileNameWithoutExtension": "NamePrefixType",
       "FileExtension": ".auto.cs",
       "DestinationProject": {
@@ -902,16 +902,16 @@
     {
       "$id": "43",
       "ClassName": "AddressBaseExtendedFieldValue",
-      "ClassFullName": "Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model.AddressBaseExtendedFieldValue",
-      "Namespace": "Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model",
+      "ClassFullName": "Zirpl.Examples.Commerce.Model.AddressBaseExtendedFieldValue",
+      "Namespace": "Zirpl.Examples.Commerce.Model",
       "BaseClassDeclaration": null,
       "InterfaceDeclarations": [
         "Zirpl.AppEngine.Model.IPersistable<Guid>",
-        "Zirpl.AppEngine.Model.Extensibility.IExtendedEntityFieldValue<Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model.AddressBase,Guid>",
+        "Zirpl.AppEngine.Model.Extensibility.IExtendedEntityFieldValue<Zirpl.Examples.Commerce.Model.AddressBase,Guid>",
         "Zirpl.AppEngine.Model.IVersionable"
       ],
       "IsAbstract": false,
-      "BaseDeclaration": "public partial AddressBaseExtendedFieldValue :\r\n,\r\nZirpl.AppEngine.Model.IPersistable<Guid>,\r\nZirpl.AppEngine.Model.Extensibility.IExtendedEntityFieldValue<Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model.AddressBase,Guid>,\r\nZirpl.AppEngine.Model.IVersionable",
+      "BaseDeclaration": "public partial AddressBaseExtendedFieldValue :\r\n,\r\nZirpl.AppEngine.Model.IPersistable<Guid>,\r\nZirpl.AppEngine.Model.Extensibility.IExtendedEntityFieldValue<Zirpl.Examples.Commerce.Model.AddressBase,Guid>,\r\nZirpl.AppEngine.Model.IVersionable",
       "FileNameWithoutExtension": "AddressBaseExtendedFieldValue",
       "FileExtension": ".auto.cs",
       "DestinationProject": {
