--- a/Zirpl.AppEngine.CodeGeneration.VS2013/Zirpl.AppEngine.CodeGeneration.csproj
+++ b/Zirpl.AppEngine.CodeGeneration.VS2013/Zirpl.AppEngine.CodeGeneration.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Zirpl.AppEngine.CodeGeneration</RootNamespace>
-    <AssemblyName>Zirpl.AppEngine.CodeGeneration.VS2013</AssemblyName>
+    <AssemblyName>Zirpl.AppEngine.CodeGeneration</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -85,30 +85,30 @@
     <Compile Include="TextTemplating\TextTransformationWrapper.cs" />
     <Compile Include="TextTemplating\OutputFileProperties.cs" />
     <Compile Include="TextTemplating\TextBlock.cs" />
-    <Compile Include="TextTemplating\OutputFileBuildActionType.cs" />
+    <Compile Include="TextTemplating\BuildActionTypeEnum.cs" />
     <Compile Include="TextTemplating\OutputFile.cs" />
     <Compile Include="TextTemplating\TemplateFileManager.cs" />
     <Compile Include="TextTemplating\VisualStudioExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TextTemplating\LogHelper.cs" />
-    <Compile Include="V2\ConfigModel\AppInfo.cs" />
-    <Compile Include="V2\ConfigModel\DomainPropertyInfo.cs" />
-    <Compile Include="V2\ConfigModel\DomainTypeInfo.cs" />
-    <Compile Include="V2\ConfigModel\EnumValueInfo.cs" />
-    <Compile Include="V2\ConfigModel\FileGeneration\ClassFileToGenerate.cs" />
+    <Compile Include="AppGeneration\ConfigModel\App.cs" />
+    <Compile Include="AppGeneration\ConfigModel\DomainPropertyInfo.cs" />
+    <Compile Include="AppGeneration\ConfigModel\DomainTypeInfo.cs" />
+    <Compile Include="AppGeneration\ConfigModel\EnumValueInfo.cs" />
+    <Compile Include="AppGeneration\ConfigModel\FileGeneration\ClassFileToGenerate.cs" />
     <Compile Include="TextTemplating\FileToGenerate.cs" />
-    <Compile Include="V2\ConfigModel\FileGeneration\FilesToGenerateFactory.cs" />
-    <Compile Include="V2\ConfigModel\Parsers\ConfigFileException.cs" />
-    <Compile Include="V2\ConfigModel\Parsers\JsonModel\PropertyJson.cs" />
-    <Compile Include="V2\ConfigModel\Parsers\JsonModel\EnumValueJson.cs" />
-    <Compile Include="V2\ConfigModel\Parsers\AppFileParser.cs" />
-    <Compile Include="V2\ConfigModel\Parsers\DomainFileParser.cs" />
-    <Compile Include="V2\ConfigModel\Parsers\JsonModel\AppJson.cs" />
-    <Compile Include="V2\ConfigModel\Parsers\JsonModel\DomainTypeJson.cs" />
-    <Compile Include="V2\ConfigModel\Parsers\JsonModel\IdJson.cs" />
-    <Compile Include="V2\ConfigModel\Parsers\JsonModel\RelationshipJson.cs" />
-    <Compile Include="V2\ConfigModel\RelationshipInfo.cs" />
-    <Compile Include="V2\Templates\Model\PersistableDomainClassTemplate.cs">
+    <Compile Include="AppGeneration\ConfigModel\FileGeneration\FilesToGenerateFactory.cs" />
+    <Compile Include="AppGeneration\ConfigModel\Parsers\ConfigFileException.cs" />
+    <Compile Include="AppGeneration\ConfigModel\Parsers\JsonModel\PropertyJson.cs" />
+    <Compile Include="AppGeneration\ConfigModel\Parsers\JsonModel\EnumValueJson.cs" />
+    <Compile Include="AppGeneration\ConfigModel\Parsers\AppFileParser.cs" />
+    <Compile Include="AppGeneration\ConfigModel\Parsers\DomainFileParser.cs" />
+    <Compile Include="AppGeneration\ConfigModel\Parsers\JsonModel\AppJson.cs" />
+    <Compile Include="AppGeneration\ConfigModel\Parsers\JsonModel\DomainTypeJson.cs" />
+    <Compile Include="AppGeneration\ConfigModel\Parsers\JsonModel\IdJson.cs" />
+    <Compile Include="AppGeneration\ConfigModel\Parsers\JsonModel\RelationshipJson.cs" />
+    <Compile Include="AppGeneration\ConfigModel\RelationshipInfo.cs" />
+    <Compile Include="AppGeneration\Templates\Model\PersistableDomainClassTemplate.cs">
       <DependentUpon>PersistableDomainClassTemplate.tt</DependentUpon>
       <SubType>Code</SubType>
       <DesignTime>True</DesignTime>
@@ -130,13 +130,13 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-    <None Include="V2\Templates\Model\PersistableDomainClassTemplate.tt">
+    <None Include="AppGeneration\Templates\Model\PersistableDomainClassTemplate.tt">
       <Generator>TextTemplatingFilePreprocessor</Generator>
       <LastGenOutput>PersistableDomainClassTemplate.cs</LastGenOutput>
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="V2\sample json.txt" />
+    <None Include="AppGeneration\ConfigModel\Parsers\JsonModel\sample domain.zae" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
