--- a/Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.CodeGeneration/Zirpl.Examples.Commerce.CodeGenerationConfig.csproj
+++ b/Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.CodeGeneration/Zirpl.Examples.Commerce.CodeGenerationConfig.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{00E636C4-0A01-4A65-9AB9-13DD4C015418}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.CodeGeneration</RootNamespace>
-    <AssemblyName>Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.CodeGeneration</AssemblyName>
+    <RootNamespace>Zirpl.Examples.Commerce.CodeGenerationConfig</RootNamespace>
+    <AssemblyName>Zirpl.Examples.Commerce.CodeGenerationConfig</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -43,9 +43,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Zirpl.AppEngine.CodeGeneration.VS2013\Zirpl.AppEngine.CodeGeneration.VS2013.csproj">
+    <ProjectReference Include="..\Zirpl.AppEngine.CodeGeneration.VS2013\Zirpl.AppEngine.CodeGeneration.csproj">
       <Project>{f8855f9a-35d1-4c30-bb53-1fd89a984989}</Project>
-      <Name>Zirpl.AppEngine.CodeGeneration.VS2013</Name>
+      <Name>Zirpl.AppEngine.CodeGeneration</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
