--- a/Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model/Zirpl.Examples.Commerce.Model.csproj
+++ b/Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model/Zirpl.Examples.Commerce.Model.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{84E18337-0043-464A-B9D9-D4B3F4B849CD}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model</RootNamespace>
-    <AssemblyName>Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model</AssemblyName>
+    <RootNamespace>Zirpl.Examples.Commerce.Model</RootNamespace>
+    <AssemblyName>Zirpl.Examples.Commerce.Model</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -43,18 +43,23 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="_auto\AddressBase.auto.cs">
       <DependentUpon>AppTransform.txt4</DependentUpon>
+      <SubType>Code</SubType>
     </Compile>
     <Compile Include="_auto\AddressBaseExtendedFieldValue.auto.cs">
       <DependentUpon>AppTransform.txt4</DependentUpon>
+      <SubType>Code</SubType>
     </Compile>
     <Compile Include="_auto\DomesticAddress.auto.cs">
       <DependentUpon>AppTransform.txt4</DependentUpon>
+      <SubType>Code</SubType>
     </Compile>
     <Compile Include="_auto\InternationalAddress.auto.cs">
       <DependentUpon>AppTransform.txt4</DependentUpon>
+      <SubType>Code</SubType>
     </Compile>
     <Compile Include="_auto\NamePrefixType.auto.cs">
       <DependentUpon>AppTransform.txt4</DependentUpon>
+      <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -63,7 +68,6 @@
       <Name>Zirpl.AppEngine</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
     <None Include="_auto\AppTransform.txt4" />
   </ItemGroup>
