--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,4 @@
 /Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.CodeGeneration/bin
 /Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model/obj
 /Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model/bin
+/Zirpl.AppEngine.CodeGeneration.VS2013/Zirpl.AppEngine.CodeGeneration.csproj.user
