--- a/Zirpl.AppEngine.CodeGeneration.VS2013/Zirpl.AppEngine.CodeGeneration.csproj
+++ b/Zirpl.AppEngine.CodeGeneration.VS2013/Zirpl.AppEngine.CodeGeneration.csproj
@@ -87,7 +87,7 @@
     <Compile Include="TextTemplating\TextBlock.cs" />
     <Compile Include="TextTemplating\BuildActionTypeEnum.cs" />
     <Compile Include="TextTemplating\OutputFile.cs" />
-    <Compile Include="TextTemplating\TemplateFileManager.cs" />
+    <Compile Include="TextTemplating\OutputFileManager.cs" />
     <Compile Include="TextTemplating\VisualStudioExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TextTemplating\LogHelper.cs" />
